After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793067 - interleave: memory leak when processing buffers with GAP flag set
interleave: memory leak when processing buffers with GAP flag set
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.12.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-01-31 15:01 UTC by Philippe Normand
Modified: 2018-01-31 15:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (908 bytes, patch)
2018-01-31 15:04 UTC, Philippe Normand
none Details | Review
updated patch (1.10 KB, patch)
2018-01-31 15:17 UTC, Philippe Normand
committed Details | Review

Description Philippe Normand 2018-01-31 15:01:59 UTC
In such case the buffer is correctly unreffed but remained mapped. Will attach a patch.
Comment 1 Philippe Normand 2018-01-31 15:04:41 UTC
Created attachment 367711 [details] [review]
proposed patch
Comment 2 Philippe Normand 2018-01-31 15:15:10 UTC
Another approach would be to map the buffer only if it will be really processed :)
Comment 3 Philippe Normand 2018-01-31 15:17:26 UTC
Created attachment 367713 [details] [review]
updated patch