interleave: fix memory leak of GAP buffers

https://bugzilla.gnome.org/show_bug.cgi?id=793067